--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,14 @@
 #app{
   text-align: center;
 }
+.tabla{
+  display: flex;
+  justify-content: center;
+}
+
+table, th, td{
+  border: 1px solid black;
+}
+th,td{
+  padding: 0px 20px;
+}
